<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_title"/>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/commentTextView"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextView"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameTextView"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton"
        android:text="@string/delete_comment"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ban_days_length"/>
        <EditText
            android:id="@+id/banDaysEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number">

        </EditText>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/banButton"
        android:text="@string/ban_user"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ignoreButton"
        android:text="@string/ignore_comment_report"/>
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:visibility="gone"
       android:id="@+id/loadMoreButton"
       android:text="@string/load_more_comments"/>
    <TextView
        android:id="@+id/userBannedTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="#ff0000"
        android:visibility="gone"
        android:text="@string/user_banned"/>

    <TextView
        android:id="@+id/commentDeletedTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="#ff0000"
        android:visibility="gone"
        android:text="@string/comment_deleted"/>
    <TextView
        android:id="@+id/commentIgnoredTextView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="#ff0000"
        android:visibility="gone"
        android:text="@string/comment_ignored"/>

</LinearLayout>